EXTRA_DIST = def_cmds.texi menus.texi quotation.texi \
 float_with_at_commands.texi float_copying.texi macro_in_menu.texi \
 ref_in_anchor.texi tex.texi block_EOL.texi detailmenus.texi \
 commands_in_ifset.texi simplest.texi punctuation.texi def_end_of_line.texi \
 center.texi tables.texi formats_in_menu.texi heading.texi quotes.texi \
 indicateurl_paragraph.texi complex_command_in_simple_command.texi \
 symbol_after_block.texi html-extrali.texi html-para.texi html-title.texi \
 images.texi \
 simple_menu.init weird_quotes.init redefine_need.init file.css tests.txt res

DISTCLEANFILES = l2h_tmp_dir.init tests.log tests.out

distclean-local:
	rm -rf out diffs
